# stactools-hfrnet

./: CHANGELOG.md  LICENSE  README-template.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  build  cibuild  console  lint  stac  test
docs/: example.ipynb
scripts/: test  update-examples
src/stactools/hfrnet/: __init__.py  commands.py  stac.py
tests/: test_commands.py  test_stac.py
tests/data/: rtv-ushi-6km-25h-avg_v1r0_hfr_s20230103120000_e20230103120000_c20250107174501.nc  rtv-ushi-6km-ann-avg_v1r0_hfr_s20230101000000_e20231231235959_c20250107174619.nc  rtv-ushi-6km-month-avg_v1r0_hfr_s20230101000000_e20230131235959_c20250107174618.nc  rtv-ushi-6km-uwls_v1r0_hfr_s20230104000000_e20230104000000_c20250107174439.nc
