[project]
name = "stactools-hfrnet"
version = "0.1.0"
description = "stactools implementation for High Frequency Radar Network data"
readme = "README.md"
authors = [
    { name = "Evan McQuinn", email = "evan.mcquinn@techtraverse.io" },
    { name = "Kendall Aubertot", email = "kendall.aubertot@techtraverse.io" }
]
maintainers = [
    { name = "Evan McQuinn", email = "evan.mcquinn@techtraverse.io" },
    { name = "Kendall Aubertot", email = "kendall.aubertot@techtraverse.io" }
]
keywords = ["stactools", "pystac", "catalog", "STAC"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "netcdf4>=1.7.2",
    "pydantic>=2.11.3",
    "stactools>=0.4.0",
    "xarray>=2024.7.0",
]

[dependency-groups]
dev = [
    "codespell~=2.3",
    "mypy~=1.10",
    "pre-commit~=4.0",
    "pytest-cov~=6.0",
    "pytest~=8.2",
    "requests~=2.32",
    "ruff==0.8.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
docs = ["pystac~=1.10", "ipykernel~=6.29", "jinja2~=3.1"]

[project.urls]
Github = "https://github.com/techtraverse/stactools-hfrnet"
Issues = "https://github.com/techtraverse/stactools-hfrnet/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
strict = true
mypy_path = "src"

[tool.ruff]
lint.select = ["E", "F", "I"]
